--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -22,7 +22,6 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 safi.root.dir = /,opt,safi
-safi.var.dir = ${safi.root.dir},var
 safi.tmp.dir = ${safi.root.dir},tmp
-safi.job.dir = ${safi.var.dir},job
-safi.plugin.dir = ${safi.var.dir},plugin
+safi.job.dir = ${safi.root.dir},job
+safi.plugin.dir = ${safi.root.dir},plugin
