--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,17 @@ POSSIBILITY OF SUCH DAMAGE.
             <dependency>
                 <groupId>jp.mydns.project-k</groupId>
                 <artifactId>safi-plugin-interface</artifactId>
-                <version>2.0.4</version>
+                <version>3.0.0-M2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.persistence</groupId>
+                <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+                <version>4.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations-jakarta</artifactId>
+                <version>2.2.20</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -101,6 +111,11 @@ POSSIBILITY OF SUCH DAMAGE.
             <groupId>jp.mydns.project-k</groupId>
             <artifactId>safi-plugin-interface</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
