--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@ POSSIBILITY OF SUCH DAMAGE.
         <!--<version.smallrye-config>3.5.0</version.smallrye-config>-->
         <!--<version.mockito>5.5.0</version.mockito>-->
         <!--<version.junit>5.10.0</version.junit>-->
-        <!--<versin.slf4j>2.0.9</versin.slf4j>-->
-        <!--<version.eclipselink>4.0.2</version.eclipselink>-->
+        <versin.slf4j>2.0.16</versin.slf4j>
+        <version.eclipselink>4.0.3</version.eclipselink>
         <!--<version.ulidj>1.0.4</version.ulidj>-->
         <!--<version.assertj>3.24.2</version.assertj>-->
         <!--<version.mockito>5.2.0</version.mockito>-->
@@ -115,21 +115,21 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>k-formula-mechanism</artifactId>
             <version>${version.k-formula-mechanism}</version>
         </dependency>-->
-        <!--        <dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>${versin.slf4j}</version>
-        </dependency>-->
-        <!--        <dependency>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <version>${versin.slf4j}</version>
-        </dependency>-->
-        <!--        <dependency>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${versin.slf4j}</version>
-        </dependency>-->
+        </dependency>
         <!--        <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations-jakarta</artifactId>
@@ -142,12 +142,15 @@ POSSIBILITY OF SUCH DAMAGE.
             <version>${version.microprofile-config}</version>
             <scope>provided</scope>
         </dependency>-->
-        <!--        <dependency>
+        
+        <!-- License: EPL-2.0 -->
+        <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
             <version>${version.eclipselink}</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
+        
         <!--        <dependency>
             <groupId>io.azam.ulidj</groupId>
             <artifactId>ulidj</artifactId>
