--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -21,5 +21,6 @@
 # CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
-jp.mydns.projectk.safi.validator.TimeRange.message = Time value out of range.
-jp.mydns.projectk.safi.validator.TimeAccuracy.message = Time values less than seconds are not allowed.
+jp.mydns.projectk.safi.validator.TimeRange.message = out of range
+jp.mydns.projectk.safi.validator.TimeAccuracy.message = less than seconds are not allowed
+jp.mydns.projectk.safi.validator.PositiveOrZeroDuration.message = must be grater than or equal to 0
