--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -24,3 +24,4 @@
 jp.mydns.projectk.safi.validator.TimeRange.message = out of range
 jp.mydns.projectk.safi.validator.TimeAccuracy.message = less than seconds are not allowed
 jp.mydns.projectk.safi.validator.PositiveOrZeroDuration.message = must be grater than or equal to 0
+jp.mydns.projectk.safi.validator.DurationRange.message = out of range
