--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,13 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- License: EPL-2.0 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Jakarta EL implements -->
         <!-- License: EPL-2.0 -->
