--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@ POSSIBILITY OF SUCH DAMAGE.
         <version.jakartaee>10.0.0</version.jakartaee>
         <version.swagger>2.2.28</version.swagger>
         <version.swagger-ui>5.18.3</version.swagger-ui>
-        <!--<version.microprofile-config>3.1</version.microprofile-config>-->
-        <!--<version.smallrye-config>3.5.0</version.smallrye-config>-->
+        <version.microprofile-config>3.1</version.microprofile-config>
+        <version.smallrye-config>3.12.4</version.smallrye-config>
         <version.mockito>5.16.0</version.mockito>
         <version.junit>5.11.4</version.junit>
         <versin.slf4j>2.0.17</versin.slf4j>
@@ -200,7 +200,7 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
         <!-- License: EPL-2.0 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -252,12 +252,24 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>k-formula-mechanism</artifactId>
             <version>${version.k-formula-mechanism}</version>
         </dependency>-->
-        <!--        <dependency>
+
+        <!-- MicroProfile Config -->
+        <!-- License: ASL-2.0 -->
+        <dependency>
             <groupId>org.eclipse.microprofile.config</groupId>
             <artifactId>microprofile-config-api</artifactId>
             <version>${version.microprofile-config}</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
+        
+        <!-- MicroProfile Config implements -->
+        <!-- License: ASL-2.0 -->
+        <dependency>
+            <groupId>io.smallrye.config</groupId>
+            <artifactId>smallrye-config</artifactId>
+            <version>${version.smallrye-config}</version>
+            <scope>test</scope>
+        </dependency>
 
         <!--        <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -265,6 +277,7 @@ POSSIBILITY OF SUCH DAMAGE.
             <scope>test</scope>
         </dependency>-->
 
+        <!-- Mockito -->
         <!-- License: MIT -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -272,7 +285,6 @@ POSSIBILITY OF SUCH DAMAGE.
             <version>${version.mockito}</version>
             <scope>test</scope>
         </dependency>
-
         <!-- License: MIT -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -280,12 +292,8 @@ POSSIBILITY OF SUCH DAMAGE.
             <version>${version.mockito}</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>
-            <groupId>io.smallrye.config</groupId>
-            <artifactId>smallrye-config</artifactId>
-            <version>${version.smallrye-config}</version>
-            <scope>test</scope>
-        </dependency>-->
+
+
 
 
         <!--        <dependency>
@@ -379,7 +387,7 @@ POSSIBILITY OF SUCH DAMAGE.
                     <artifactId>maven-antrun-plugin</artifactId>
                     <version>${version.maven-antrun}</version>
                 </plugin>
-                
+
                 <!-- License: ASL-2.0 -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -414,7 +422,7 @@ POSSIBILITY OF SUCH DAMAGE.
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>3.1.1</version>
                 </plugin>-->
-                
+
 
                 <!--                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -505,7 +513,7 @@ POSSIBILITY OF SUCH DAMAGE.
                             </execution>
                         </executions>
                     </plugin>
-                    
+
                     <!-- Report code coverage. -->
                     <plugin>
                         <groupId>org.jacoco</groupId>
