--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@ POSSIBILITY OF SUCH DAMAGE.
         <version.h2database>2.3.232</version.h2database>
         <version.jacoco>0.8.12</version.jacoco>
         <version.sonar>5.0.0.4389</version.sonar>
+        <version.jakartaee-lang-model>4.1.0</version.jakartaee-lang-model>
 
         <!-- Versions for Apache Maven Plugins -->
         <version.maven-surefire>3.5.2</version.maven-surefire>
@@ -269,6 +270,7 @@ POSSIBILITY OF SUCH DAMAGE.
         </dependency>
 
         <!-- Jakarta CDI implements -->
+        <!-- License: ASL-2.0 -->
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-junit5</artifactId>
@@ -284,6 +286,16 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>h2</artifactId>
             <version>${version.h2database}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Provides a metamodel for parsing and processing CDI annotations     -->
+        <!-- and bean definitions at compile time. Only used for IDE completion. -->
+        <!-- License: ASL-2.0 -->
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.lang-model</artifactId>
+            <version>${version.jakartaee-lang-model}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
